[gd_scene load_steps=4 format=3 uid="uid://bji248xsn4q3q"]

[ext_resource type="Script" uid="uid://4cr1ena1a11" path="res://scenes/ui/graph.gd" id="1_0vutq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xt7i1"]
bg_color = Color(0.15967, 0.15967, 0.15967, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.166853, 0.166853, 0.166853, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="Theme" id="Theme_suosx"]

[node name="Graph" type="Control"]
custom_minimum_size = Vector2(400, 250)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0vutq")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_xt7i1")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="Panel/VBoxContainer/Control"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 10

[node name="MaxLabel" type="Label" parent="Panel/VBoxContainer/Control/MarginContainer"]
layout_mode = 2
text = "1"
vertical_alignment = 2

[node name="MarginContainer3" type="MarginContainer" parent="Panel/VBoxContainer/Control"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="GraphingArea" type="Control" parent="Panel/VBoxContainer/Control/MarginContainer3"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1
theme = SubResource("Theme_suosx")

[node name="TopBorder" type="Line2D" parent="Panel/VBoxContainer/Control/MarginContainer3/GraphingArea"]
position = Vector2(0, 1)
points = PackedVector2Array(0, 0, 1132, 0)
width = 1.0
default_color = Color(0.574328, 0.574328, 0.574328, 1)

[node name="BottomBorder" type="Line2D" parent="Panel/VBoxContainer/Control/MarginContainer3/GraphingArea"]
points = PackedVector2Array(0, 573, 1132, 573)
width = 1.0
default_color = Color(0.572549, 0.572549, 0.572549, 1)

[node name="MarginContainer2" type="MarginContainer" parent="Panel/VBoxContainer/Control"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 2

[node name="MinLabel" type="Label" parent="Panel/VBoxContainer/Control/MarginContainer2"]
layout_mode = 2
text = "-1"

[node name="Legend" type="MarginContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 10

[node name="HFlowContainer" type="HFlowContainer" parent="Panel/VBoxContainer/Legend"]
layout_mode = 2
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 10

[node name="UpdateTimer" type="Timer" parent="."]
process_thread_group = 2
process_thread_group_order = 0
process_thread_messages = 0
wait_time = 0.2

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="resized" from="Panel/VBoxContainer/Control/MarginContainer3/GraphingArea" to="." method="_on_graphing_area_resized"]
[connection signal="timeout" from="UpdateTimer" to="." method="_on_timer_timeout"]
